style.css
/* ... */
body img.thumbnail {
    width: 100px;
    height: 100px;
    object-fit: cover;
    margin-right: 10px;
}

.page-buttons {
    align-content: center;
    align-items: center;
    justify-content: space-between;

    .flex-container:has(#sortOrder) {
        flex-flow: row;
    }
}

.searching {
    filter: grayscale(100%);
}

/* Mobile layout CSS */

@media screen and (max-width: 1000px) {
    #sheld {
        margin: 0;
        height: 100dvh;
        max-width: 100dvw !important;
        border-radius: 0;
    }

    #top-settings-holder {
        padding: 0.62rem 0.18rem;

        &:not(.collapsed)~#sheld {
            filter: brightness(45%)
        }

        &.collapsed {

            #ai-config-button,
            #sys-settings-button,
            #advanced-formatting-button,
            #WI-SP-button,
            #logo_block,
            #extensions-settings-button,
            #persona-management-button,
            #user-settings-button,
            #rightNavHolder,
            .historyButton,
            #select_chat_div,
            #select_chat_search,
            #explore-button {
                display: none !important;
            }
        }
    }

    .drawer-content,
    #explore-button .drawer-content,
    #left-nav-panel,
    #right-nav-panel,
    #character_popup {
        margin: 0;
        top: 0 !important;
        height: 100dvh;
        left: 3.06rem !important;
        max-width: calc(100dvw - 3.06rem) !important;
        min-width: calc(100dvw - 3.06rem) !important;
        border-radius: 0;
    }

    #sys-settings-button,
    #advanced-formatting-button,
    #WI-SP-button,
    #logo_block,
    #extensions-settings-button,
    #user-settings-button {
        padding-left: 0;
        display: flex !important;
    }

    #leftSendForm,
    #rightSendForm {
        align-self: center;
    }

    #persona-management-button {
        position: absolute;
        align-self: center;
    }

    .character-list-item {
        flex-flow: column;
    }
}

/* Spash text */
#subtitle {
    text-align: center;
    color: #FFFF00;
    text-shadow: 1px 1px 0px #000;
    position: relative;
    margin: 0;
    height: 0;
    left: 180px;
    bottom: 9px;
    animation: subtitle .27s alternate infinite;
}

@keyframes subtitle {
    0% {
        transform: scale(0.875) rotate(-9deg)
    }

    100% {
        transform: scale(1) rotate(-9deg)
    }
}

